configmap-pod.yaml
#kubectl create configmap config1  --from-literal=COLOUR=red --from-literal=SPEED=fast -n ca200

#Use configmap values as env variables in pod

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redfastcar
  name: redfastcar
  namespace: ca200
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - env | grep -E 'COLOUR|SPEED'; sleep 3600
    image: busybox
    name: redfastcar
    resources: {}
    env:
        # Define the environment variable
    - name: COLOUR # Notice that the case is different here
      valueFrom:
        configMapKeyRef:
          name: config1 
          key: COLOUR
    - name: SPEED # Notice that the case is different here
      valueFrom:
        configMapKeyRef:
          name: config1          
          key: SPEED        
          # The ConfigMap this value comes from.
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
