liveness-pod.yaml
Create Nginx Pod with Liveness HTTP Get Probe
Create a new Pod named nginx in the ca1 namespace using the nginx image. Ensure that the pod listens on port 80 and configure it with a Liveness HTTP GET probe with the following configuration:

Probe Type: httpGet
Path: /
Port: 80
Initial delay seconds: 10
Polling period seconds: 5

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
  namespace: ca1
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    ports:
    - protocol: TCP
      containerPort: 80
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 5
  dnsPolicy: ClusterFirst
status: {}
