pv-pvc-pod.yaml
Check 1: Persisting Data
Create a PersistentVolume named pv in the qq3 Namespace. The PersistentVolume must be configured with the following settings:

storageClassName: host
2Gi of storage capacity
Allow a single Node read-write access
Use a hostPath of /mnt/data
The PersistentVolume must be claimed by a PersistentVolumeClaim named pvc. The PersistentVolume must request 1Gi of storage capacity.

Lastly, create a Pod named persist with one redis container. The Pod must use the pvc PersistentVolumeClaim to mount a volume at /data


ubuntu@ip-10-0-128-5:~$ cat pv.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: pv
  namespace: qq3
spec:
  storageClassName: host
  capacity:
    storage: 2Gi  
  accessModes:
    - ReadWriteOnce
  hostPath:
    path: /mnt/data
    
  ubuntu@ip-10-0-128-5:~$ cat pvc.yaml 
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc
  namespace: qq3
spec:
  accessModes:
    - ReadWriteOnce
  volumeMode: Filesystem
  resources:
    requests:
      storage: 1Gi
      
  ubuntu@ip-10-0-128-5:~$ cat pod.yaml 
apiVersion: v1
kind: Pod
metadata:
  name: persist
  namespace: qq3
spec:
  containers:
    - name: persist
      image: redis
      volumeMounts:
      - mountPath: "/data"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: pvc
